--- a/Views/Invoice/List.cshtml
+++ b/Views/Invoice/List.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "List";
 }
 <div class="container mt-4">
-    <h3>@ViewData["Title"]</h3>
+    <center><h3>Invoices</h3></center>
     <table class="table table-bordered table-striped" id="invoiceTable">
         <thead>
             <tr>
