--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
     
     <style>
         .nav-link.active {
-            background-color: aqua; /* Example active state */
+            background-color: aliceblue;
             font-weight: bold;
         }
 
