--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>To FiroStore, happy shopping! </p>
+    <p>To FiroTech Billing System!</p>
 </div>
