--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -18,10 +18,10 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+  margin-bottom: 60px; /* Footer space maintained */
 }
 
 .small-alert {
-    font-size: 8px;
-    padding: 8px;
+  font-size: 8px;
+  padding: 8px;
 }
