--- a/Views/Invoice/InvoicePrint.cshtml
+++ b/Views/Invoice/InvoicePrint.cshtml
@@ -98,7 +98,8 @@
                 </div>
                 <div class="col-sm-4 invoice-col">
                     <b>Invoice# @Model.InvoiceID</b><br>
-                    <b>Date: @Model.Date.ToString("dd-MM-yyyy")</b>
+                    <b>Date: @Model.Date.ToString("dd-MM-yyyy")</b><br />
+                     Printed By: @Model.PrintedBy
                 </div>
             </div>
 
