--- a/Views/Invoice/Index.cshtml
+++ b/Views/Invoice/Index.cshtml
@@ -1,4 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Identity
+@model Invoice.Services.Pagination<Invoice.Data_Models.Invoice>
+
 @inject UserManager<IdentityUser> UserManager
 <header>
     <link rel="stylesheet" href="~/css/Icon.css">
