--- a/Views/Invoice/List.cshtml
+++ b/Views/Invoice/List.cshtml
@@ -48,6 +48,7 @@
                     
                     <td>
                         <a class="btn btn-primary btn-sm Printbtn" href="/Invoice/RePrint/@data.Id" target="_blank">Print</a>
+                        <a class="btn btn-primary btn-sm Downloadbtn" href="/Invoice/GeneratePDF/@data.Id">Download</a>
                     </td>
                 </tr>
             }
